[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/weapons/base_weapon.gd" type="Script" id=1]

[node name="BaseWeapon" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ReloadTimer" to="." method="on_reload_timer_timeout"]
